--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,11 @@
     <string name="label_loading">Loading...</string>
     <string name="msg_no_record">No record available</string>
     <string name="desc_leader_banner">Leader Banner</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="label_are_you_sure">Are you sure</string>
+    <string name="desc_question_mark">Question Mark</string>
+    <string name="btn_label_yes">Yes</string>
+    <string name="label_submission_successful">Submission Successful</string>
+    <string name="label_submission_failed">Submission not Successful</string>
 </resources>
